[package]
name = "yoshi"
version = "0.1.6"
edition = "2021"
rust-version = "1.87.0"
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/yoshi"
license = "MIT OR Apache-2.0"
description = "Entry for the Yoshi error framework."
keywords = ["error", "error-handling", "result", "yoshi", "std-only"]
categories = ["development-tools", "rust-patterns", "api-bindings"]

[dependencies]
cargo_metadata = { version = "0.18.1", optional = true }
chrono = { version = "0.4.41", optional = true, features = ["serde"] }
clap = { version = "4.5.11", optional = true, features = ["derive"] }
colored = { version = "2.2.0", optional = true }
crossterm = { version = "0.28.0", optional = true }
dashmap = { version = "6.1.0", optional = true }
env_logger = "0.11.5"
futures = { version = "0.3.31", optional = true }
indicatif = { version = "0.17.8", optional = true }
tracing = { version = "0.1.41", optional = true }
miette = { version = "7.6.0", optional = true }
once_cell = { version = "1.21.3", optional = true }
owo-colors = { version = "4.2.0", optional = true }
quote = { version = "1.0.40", optional = true }
ratatui = { version = "0.29.0", optional = true }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.140", optional = true }
smallvec = { version = "1.15.1", optional = true }
syn = { version = "2.0.103", optional = true, features = [
    "full",
    "visit",
    "visit-mut",
] }
tokio = { version = "1.45.1", optional = true, features = ["full"] }
uuid = { version = "1.17.0", optional = true, features = ["v4", "serde"] }
walkdir = { version = "2.5.0", optional = true }
yoshi-core = { version = "0.1.6", path = "../yoshi-core", optional = true, default-features = false }
yoshi-derive = { version = "0.1.6", path = "../yoshi-derive", optional = true, default-features = false }
yoshi-std = { version = "0.1.6", path = "../yoshi-std", optional = true, default-features = false }

[dev-dependencies]
syn = { version = "2.0.103", features = ["full"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
yoshi-std = { path = "../yoshi-std" }

[features]
default = ["full"]
async = ["dep:tokio", "dep:futures", "rust-1-87"]
cargo-integration = [
    "dep:cargo_metadata",
    "dep:syn",
    "dep:quote",
    "dep:clap",
    "dep:colored",
    "dep:indicatif",
    "dep:walkdir",
    "yoshi-std",
    "async",
]
cli = ["std"]
convenience = [
    "dep:dashmap",
    "dep:smallvec",
    "dep:chrono",
    "dep:regex",
    "dep:uuid",
    "async",
]
cross-process = ["pipe", "serde"]
derive = [
    "dep:yoshi-core",
    "dep:yoshi-derive",
    "yoshi-derive/std",
    "yoshi-std/derive",
]
full = [
    "tui",
    "std",
    "async",
    "serde",
    "derive",
    "tracing",
    "rust-1-87",
    "convenience",
    "cargo-integration",
]
performance-monitoring = ["rust-1-87"]
pipe = ["rust-1-87"]
precise-capturing = []
rust-1-87 = ["dep:once_cell", "simd-optimized", "precise-capturing"]
serde = ["dep:serde", "dep:serde_json", "yoshi-std/serde"]
simd-optimized = ["yoshi-std/simd-optimized"]
std = ["dep:yoshi-core", "yoshi-std/std"]
tracing = ["dep:tracing", "yoshi-std/tracing"]
tui = ["dep:ratatui", "dep:crossterm", "dep:owo-colors", "cargo-integration"]

[package.metadata.docs.rs]
features = ["std", "derive", "serde", "tracing", "rust-1-87", "convenience"]
no-default-features = false
rustc-args = ["--cap-lints=warn"]
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "yum"
path = "src/main.rs"
required-features = ["tracing"]
